--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>ZeroLend - Lending Protocol on zkSync</title>
+    <title>OX BOT - Ultimate Fx Solution </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -77,21 +77,21 @@
       <section id="hero-section">
         <canvas id="gradient-canvas"></canvas>
         <div class="text-area">
-          <p class="title-text wow fadeInRight">DeFi Banking</p>
-          <p class="title-text wow fadeInLeft">Should Be Simple</p>
+          <p class="title-text wow fadeInRight">OX Bot</p>
+          <p class="title-text wow fadeInLeft">Your ultimate solution to Forex Trading</p>
           <div class="title-subtitle">
             <span class="subtitle-text"
             ><i><b>ZeroLend</b></i> is a user-friendly decentralized lending protocol built
               on zkSync, and its primary focus is on onboarding
               the next billion users to the wonders of DeFi banking.</span>
-            <p class="title-text wow fadeInRight">& Easy To Use</p>
+            <p class="title-text wow fadeInRight">Easy to Setup</p>
           </div>
           <span class="subtitle-text mobile-version"
           ><i><b>ZeroLend</b></i> is a user-friendly decentralized lending protocol built
               on zkSync, and its primary focus is on onboarding
               the next billion users to the wonders of DeFi banking.</span>
           <a class="cta-btn" href="https://app.zerolend.xyz" target="_self">
-            <span>VISIT APP</span>
+            <span>ACCESS OX BOT</span>
             <div class="arrow">
               <i class="fa fa-arrow-right"></i>
             </div>
@@ -102,9 +102,9 @@
     <div class="moving-section">
       <section id="pitch-section" class="container">
         <div class="text-area">
-          <p class="title-text wow fadeInRight">Traditional Banking </p>
+          <p class="title-text wow fadeInRight">Get Access </p>
           <div class="title-highlight title-text wow fadeInLeft">
-            <p class="title-text">is a </p>
+            <p class="title-text">to wining </p>
             <div class="highlight-text-div">
               <span class="title-text">Blackbox</span>
             </div>
