--- a/index.html
+++ b/index.html
@@ -1,285 +1,102 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <title>OX BOT - Ultimate Fx Solution </title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Tektur:wght@400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <link href="style.css" rel="stylesheet" />
-    <link href="animate.css" rel="stylesheet" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
+<head>
+  <title>OX BOT - Ultimate Fx Solution </title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Tektur:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
+  <link href="style.css" rel="stylesheet" />
+  <link href="animate.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:title" content="ZeroLend" />
-    <meta property="og:site_name" content="ZeroLend" />
-    <meta property="og:url" content=https://zerolend.xyz/>
-    <meta
-      property="og:description"
-      content="ZeroLend is a powerful decentralized lending protocol built on zkSync. Powered by Aave and Pyth Network."
-    />
-    <meta
-      name="twitter:description"
-      content="ZeroLend is an Open Source Protocol to create Non-Custodial Liquidity Markets to earn interest on supplying and borrowing assets with a variable or stable interest rate. The protocol is designed for easy integration into your products and services."
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content=https://i.imgur.com/Ee63x7K.png>
-    <meta
-      name="twitter:title"
-      content="ZeroLend Open Source Liquidity Protocol"
-    />
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://i.imgur.com/Ee63x7K.png" />
-    <meta name="twitter:site" content="@zerolendxyz" key="twittersite" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#ffffff" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.trunk.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-    <script>
-      new WOW().init({offset: 500});
-    </script>
-    <script
-      src="https://kit.fontawesome.com/57e3eef859.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./scripts/strip-gradient.js"></script>
-  </head>
-  <body>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-XLP93X9ZM0"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
+  <meta property="og:title" content="ZeroLend" />
+  <meta property="og:site_name" content="ZeroLend" />
+  <meta property="og:url" content=https://zerolend.xyz />
+  <meta property="og:description"
+    content="ZeroLend is a powerful decentralized lending protocol built on zkSync. Powered by Aave and Pyth Network." />
+  <meta name="twitter:description"
+    content="ZeroLend is an Open Source Protocol to create Non-Custodial Liquidity Markets to earn interest on supplying and borrowing assets with a variable or stable interest rate. The protocol is designed for easy integration into your products and services." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content=https://i.imgur.com/Ee63x7K.png>
+  <meta name="twitter:title" content="ZeroLend Open Source Liquidity Protocol" />
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="https://i.imgur.com/Ee63x7K.png" />
+  <meta name="twitter:site" content="@zerolendxyz" key="twittersite" />
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.trunk.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <script>
+    new WOW().init({ offset: 500 });
+  </script>
+  <script src="https://kit.fontawesome.com/57e3eef859.js" crossorigin="anonymous"></script>
+  <script src="./scripts/strip-gradient.js"></script>
+</head>
+
+<body>
+  <div class="container fixed-section">
+    <style>
+      header {
+        align-items: center;
+        justify-content: space-between;
+        padding: 5px 10px;
+       
       }
-      gtag("js", new Date());
+      
+    </style>
 
-      gtag("config", "G-XLP93X9ZM0");
-    </script>
+    <header>
+      <div class="logo">
+        <img src="images/oxbot.png" alt="Oxbot Logo" height="50px" width="50px" />
+      </div>
+      <nav>
+        <ul class="centered-list">
+          <li><a href="https://app.zerolend.xyz" target="_self">Strategy</a></li>
+          <li><a href="https://docs.zerolend.xyz" target="_self">DOCS</a></li>
+          <li><a href="https://docs.zerolend.xyz" target="_self">BOT</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section id="hero-section">
+      <canvas id="gradient-canvas"></canvas>
+      <div class="text-area">
+        <p class="title-text wow fadeInRight">Accelerate Your </p>
+        <p class="title-text wow fadeInLeft"> Forex Trading Knownledge with OXBOT</p>
+        <div class="title-subtitle">
+          <span class="subtitle-text"><i><b>OX Bot</b></i> is a forex trading tool that makes market analysis easy for
+            newbie and old traders, the process of setting up is easy when you get access to our bot. Our bot is
+            designed to help
+            you make the best trading decisions</span>
+          <p class="title-text wow fadeInRight">Easy to Setup</p>
+        </div>
+        <span class="subtitle-text mobile-version"><i><b>OX Bot</b></i> is a forex trading tool that makes market
+          analysis easy for
+          newbie and old traders, the process of setting up is easy when you get access to our bot. Our bot is designed
+          to help you make the best trading decisions.</span>
 
-    <div class="container fixed-section">
-      <section id="hero-section">
-        <canvas id="gradient-canvas"></canvas>
-        <div class="text-area">
-          <p class="title-text wow fadeInRight">OX Bot</p>
-          <p class="title-text wow fadeInLeft">Your ultimate solution to Forex Trading</p>
-          <div class="title-subtitle">
-            <span class="subtitle-text"
-            ><i><b>ZeroLend</b></i> is a user-friendly decentralized lending protocol built
-              on zkSync, and its primary focus is on onboarding
-              the next billion users to the wonders of DeFi banking.</span>
-            <p class="title-text wow fadeInRight">Easy to Setup</p>
+        <a class="cta-btn" href="https://t.me/oxbot" target="_blank">
+          <span>ACCESS OX BOT</span>
+          <div class="arrow">
+            <i class="fa fa-arrow-right"></i>
           </div>
-          <span class="subtitle-text mobile-version"
-          ><i><b>ZeroLend</b></i> is a user-friendly decentralized lending protocol built
-              on zkSync, and its primary focus is on onboarding
-              the next billion users to the wonders of DeFi banking.</span>
-          <a class="cta-btn" href="https://app.zerolend.xyz" target="_self">
-            <span>ACCESS OX BOT</span>
-            <div class="arrow">
-              <i class="fa fa-arrow-right"></i>
-            </div>
-          </a>
-        </div>
-      </section>
-    </div>
-    <div class="moving-section">
-      <section id="pitch-section" class="container">
-        <div class="text-area">
-          <p class="title-text wow fadeInRight">Get Access </p>
-          <div class="title-highlight title-text wow fadeInLeft">
-            <p class="title-text">to wining </p>
-            <div class="highlight-text-div">
-              <span class="title-text">Blackbox</span>
-            </div>
-          </div>
-          <p class="title-text wow fadeInRight">Decentralized</p>
-          <p class="title-text wow fadeInLeft">Finance is too</p>
-          <div class="title-highlight title-text wow fadeInRight">
-            <div class="highlight-text-div">
-              <span class="title-text">Risky</span>
-            </div>
-            <p class="title-text">and</p>
-            <div class="highlight-text-div">
-              <span class="title-text">Complex</span>
-            </div>
-          </div>
-          <p class="title-text wow fadeInLeft">for People to Use</p>
-          <div class="subtitle-text">
-            <!--Decentralized Finance solves many of the problems of
-            Traditional Finance but is very complex, prone to hacks, and expensive to use.
-            <br /><br />-->
-            <b>ZeroLend</b> is the first decentralized lending protocol that hides blockchain
-            complexities from users using Account Abstraction, Hyperchains, and Paymasters.
-            <br /><br />
-            Combined with the power of the zkSync stack,
-            ZeroLend is able to create a user experience for non-crypto
-            users that introduces to them the wonders of web3 banking.
-          </div>
-        </div>
-      </section>
-<!--      <section id="feature-section" class="container">-->
-<!--        <p class="title">Features</p>-->
-<!--        <div class="features">-->
-<!--          <div class="card-outside">-->
-<!--            <div class="card">-->
-<!--              <div class="img"></div>-->
-<!--              <div class="content">-->
-<!--                <div class="title">Deposit Assets & Take Loans</div>-->
-<!--                <div class="desc">-->
-<!--                  The ever-changing digital world requires a progressive-->
-<!--                  approach.-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="card-outside">-->
-<!--            <div class="card">-->
-<!--              <img class="img" src="/images/logo.png" />-->
-<!--              <div class="content">-->
-<!--                <div class="title">Decentalized & Transparent</div>-->
-<!--                <div class="desc">-->
-<!--                  The ever-changing digital world requires a progressive-->
-<!--                  approach.-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="card-outside">-->
-<!--            <div class="card">-->
-<!--              <div class="img"></div>-->
-<!--              <div class="content">-->
-<!--                <div class="title">Simple & Easy to Use</div>-->
-<!--                <div class="desc">-->
-<!--                  With the power of Gasless Transactions, Account Abstraction-->
-<!--                  and Hyperchains; We are able to totally abstract the-->
-<!--                  interaction with the blockchain.-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--          <div class="card-outside">-->
-<!--            <div class="card">-->
-<!--              <div class="img"></div>-->
-<!--              <div class="content">-->
-<!--                <div class="title">Fast & Cheap Transactions</div>-->
-<!--                <div class="desc">-->
-<!--                  The ever-changing digital world requires a progressive-->
-<!--                  approach.-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </section>-->
-      <section id="partners">
-        <p class="title">Partners</p>
-        <div class="partners-marquee">
-          <a href="https://twitter.com/PythNetwork/status/1683842291478450177"
-             target="_blank">
-            <img src="./logos/pyth_logo_lockup_light.svg"/>
-          </a>
-          <a href="https://twitter.com/zerolendxyz/status/1680726249197690881"
-             target="_blank">
-            <img src="./logos/zksync.svg"/>
-          </a>
-          <a href="https://twitter.com/zerolendxyz/status/1691102398750789632"
-             target="_blank">
-            <img src="./logos/Powered_by_Gelato_Black_B-layout.svg"
-            />
-          </a>
-          <a href="https://twitter.com/zerolendxyz/status/1699619482447290547"
-             target="_blank">
-            <img src="./logos/mundus.svg"/>
-          </a>
-          <a href="https://twitter.com/zerolendxyz/status/1700101716694421647"
-             target="_blank">
-            <img src="./logos/velocore.svg"/>
-          </a>
-          <a href="https://twitter.com/veSyncL2/status/1693656265917161840"
-             target="_blank">
-            <img src="./logos/vesync.svg"/>
-          </a>
-          <a href="https://twitter.com/zerolendxyz/status/1719003661849047458"
-             target="_blank">
-            <img src="./logos/Muteio.png" class="invert"/>
-          </a>
-          <a href="https://twitter.com/zerolendxyz/status/1715012088752644327"
-             target="_blank">
-            <img src="./logos/OKX.png" class="invert"/>
-          </a>
-          <a href="https://twitter.com/zerolendxyz/status/1710231167751065825"
-             target="_blank">
-            <img src="./logos/SpaceFi.png" class="invert"/>
-          </a>
-        </div>
-      </section>
-      <section id="footer" class="container">
-        <div class="left">
-          <div class="conclusion">
-            <p class="conclusion-text">Step Into The Void</p>
-            <p class="conclusion-desc">With ZeroLend</p>
-          </div>
+        </a>
+      </div>
+    </section>
+  </div>
+</body>
 
-          <div class="cta-btns">
-            <a class="cta-btn" href="https://docs.zerolend.xyz" target="_blank">
-              <span>View Documentation</span>
-              <div class="arrow">
-                <i class="fa fa-arrow-right"></i>
-              </div>
-            </a>
-            <a
-                    class="cta-btn"
-                    href="https://docs.zerolend.xyz/security/audits"
-                    target="_blank"
-            >
-              <span>View Audits</span>
-              <div class="arrow">
-                <i class="fa fa-arrow-right"></i>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="right">
-          <!-- <p class="right-content">
-            The ever-changing digital world requires a progressive approach. It is
-            in our DNA to push the limits and go beyond the expected. It is who we
-            are, it is what we do. We will be guide on your digital journey
-            providing web development, UI/UX design, e-commerce development,
-            creative strategy & daily technical support.
-          </p> -->
-          <div class="social-media-links">
-            <a target="_blank" href="https://twitter.com/zerolendxyz">
-              <i class="fa-brands fa-twitter"></i>
-            </a>
-            <!-- <a target="_blank" href="https://t.me/zerolendxyz">
-                <i class="fa-brands fa-telegram"></i>
-              </a> -->
-            <a target="_blank" href="https://discord.gg/zerolend">
-              <i class="fa-brands fa-discord"></i>
-            </a>
-            <a target="_blank" href="https://github.com/zerolend">
-              <i class="fa-brands fa-github"></i>
-            </a>
-          </div>
-        </div>
-      </section>
-    </div>
-  </body>
+
 </html>
