Get access: link added to btn

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <li><a href="https://docs.zerolend.xyz" target="_self">DOCS</a></li>
                 <li><a href="https://docs.zerolend.xyz" target="_self">PRICING</a></li>
             </ul>
-            <button class="order-button">GET ACCESS</button>
+            <a href="https://paystack.com/buy/ox-academy-pryfxh"" class="order-button">GET ACCESS</a>
         </nav>
     </header>
 
