features: background colors

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <li><a href="https://docs.zerolend.xyz" target="_self">DOCS</a></li>
                 <li><a href="https://docs.zerolend.xyz" target="_self">PRICING</a></li>
             </ul>
-            <a href="https://paystack.com/buy/ox-academy-pryfxh"" class="order-button">GET ACCESS</a>
+            <a href="https://paystack.com/buy/ox-academy-pryfxh" class="order-button">GET ACCESS</a>
         </nav>
     </header>
 
@@ -236,11 +236,12 @@
         </div>
     </div>
     <!-- TESTIMONIALS -->
-    <p class="container-title">Testimonials</p>
+    <div class="container">
+        <p class="testimony-title">Testimonials</p>
         <div class="pics-side">
             <figure>
                 <img src="https://picsum.photos/id/287/250/300" alt="Mountains">
-                <figcaption>MT5   </figcaption>
+                <figcaption>MT5 </figcaption>
             </figure>
             <figure style="--c:#fff5">
                 <img src="https://picsum.photos/id/475/250/300" alt="Mountains">
@@ -250,8 +251,9 @@
                 <img src="https://picsum.photos/id/475/250/300" alt="Mountains">
                 <figcaption>MT5</figcaption>
             </figure>
-
+        
         </div>
+    </div>
 
     <!-- footer section -->
 <footer>
