--- a/index.html
+++ b/index.html
@@ -241,15 +241,15 @@
         <div class="pics-side">
             
             <figure>
-                <img src="https://picsum.photos/id/287/250/300" alt="Mountains">
+                <img src="/images/mt5.jpg" alt="Mountains">
                 <figcaption>MT5 </figcaption>
             </figure>
             <figure style="--c:#fff5">
-                <img src="https://picsum.photos/id/475/250/300" alt="Mountains">
+                <img src="/images/oxsite.jpg alt="Mountains">
                 <figcaption>OXBOT</figcaption>
             </figure>
             <figure style="--c:#fff5">
-                <img src="https://picsum.photos/id/475/250/300" alt="Mountains">
+                <img src="/images/deriv.jpg" alt="Mountains">
                 <figcaption>DERIV</figcaption>
             </figure>
         
@@ -263,18 +263,18 @@
     <!-- <a href="https://codepen.io/AAMutlu20" class="codepen"><ion-icon class="fa fa-github fa-1x" aria-hidden="true"
             name="logo-codepen"></ion-icon></a> -->
     <div class="copyright">
-        <p> Made by<a href="t.me/oxbotdev" target="_blank"> <span>&nbsp;Code
+        <p>developed by<a href="t.me/oxbotdev" target="_blank"> <span>&nbsp;Code
                     Ray&nbsp;</span></a></p>
     </div>
 </footer>
 
 <footer class="mobile">
-    <a href="https://github.com/AAMutlu20" class="github"><ion-icon class="fa fa-github fa-3x" aria-hidden="true"
+    <a href="https://github.com/coderayjs" class="github"><ion-icon class="fa fa-github fa-3x" aria-hidden="true"
             name="logo-github"></ion-icon></a>
-    <a href="https://codepen.io/AAMutlu20" class="codepen"><ion-icon class="fa fa-github fa-3x" aria-hidden="true"
+    <a href="https://codepen.io/" class="codepen"><ion-icon class="fa fa-github fa-3x" aria-hidden="true"
             name="logo-codepen"></ion-icon></a>
     <div class="copyright">
-        <p> Made by <span>&nbsp;Code Ray&nbsp;</span></p>
+        <p> developed by <span>&nbsp;Code Ray&nbsp;</span></p>
     </div>
 </footer>
 
