--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 designed
                 to help you make the best trading decisions.</span>
 
-            <a class="cta-btn" href="https://paystack.com/buy/ox-academy-pryfxh" target="_blank">
+            <a class="cta-btn" href="https://paystack.com/buy/ox-academy-pryfxh" target="_self">
                 <span>ACCESS OXBOT</span>
                 <div class="cta-icon">
                     <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
@@ -241,15 +241,15 @@
         <div class="pics-side">
             
             <figure>
-                <img src="/images/mt5.jpg" alt="Mountains">
+                <img src="/images/mt5.jpg" alt="Mountains" height="500px" width="250px">
                 <figcaption>MT5 </figcaption>
             </figure>
             <figure style="--c:#fff5">
-                <img src="/images/oxsite.jpg alt="Mountains">
+                <img src="/images/oxsite.jpg" alt="Mountains"height="500px" width="250px">
                 <figcaption>OXBOT</figcaption>
             </figure>
             <figure style="--c:#fff5">
-                <img src="/images/deriv.jpg" alt="Mountains">
+                <img src="/images/deriv.jpg" alt="Mountains" height="500px" width="250px">
                 <figcaption>DERIV</figcaption>
             </figure>
         
