--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 &#9776; <!-- Hamburger icon -->
             </button>
             <ul class="centered-list" id="nav-links">
-                <li><a href="https://app.zerolend.xyz" target="_self">HOME </a></li>
-                <li><a href="https://app.zerolend.xyz" target="_self">OX BOT </a></li>
-                <li><a href="https://docs.zerolend.xyz" target="_self">DOCS</a></li>
-                <li><a href="https://docs.zerolend.xyz" target="_self">PRICING</a></li>
+                <li><a href="https://oxacademy.xyz" target="_self">HOME </a></li>
+                <li><a href="https://t.me/Oxademybot" target="_self">OX BOT </a></li>
+                <li><a href="https://gitbooks.com" target="_self">DOCS</a></li>
+                <li><a href="https://oxacademy.xyz" target="_self">PRICING</a></li>
             </ul>
             <a href="https://paystack.com/buy/ox-academy-pryfxh" class="order-button">GET ACCESS</a>
         </nav>
