--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     <!-- <a href="https://codepen.io/AAMutlu20" class="codepen"><ion-icon class="fa fa-github fa-1x" aria-hidden="true"
             name="logo-codepen"></ion-icon></a> -->
     <div class="copyright">
-        <p>developed by<a href="t.me/oxbotdev" target="_blank"> <span>&nbsp;Code
+        <p>developed by<a href="t.me/oxbotdev" target="_blank"> <span>&nbsp;Tech
                     Ray&nbsp;</span></a></p>
     </div>
 </footer>
@@ -274,7 +274,7 @@
     <a href="https://codepen.io/" class="codepen"><ion-icon class="fa fa-github fa-3x" aria-hidden="true"
             name="logo-codepen"></ion-icon></a>
     <div class="copyright">
-        <p> developed by <span>&nbsp;Code Ray&nbsp;</span></p>
+        <p> developed by <span>&nbsp;Tech Ray&nbsp;</span></p>
     </div>
 </footer>
 
