--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/fav.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/fav.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <link rel="mask-icon" href="/images//fav.png color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     
@@ -83,6 +83,12 @@
 
             <a class="cta-btn" href="https://paystack.com/buy/ox-academy-pryfxh" target="_self">
                 <span>ACCESS OXBOT</span>
+                <div class="cta-icon">
+                    <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+                </div>
+            </a>
+            <a class="cta-btn" href="https://t.me/oxacademy" target="_self">
+                <span>YOUTUBE AUTOMATION</span>
                 <div class="cta-icon">
                     <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
                 </div>
