tool sections text

--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
     <!-- Tool -->
     <div class="container">
         <p class="testimony-title">Tools</p>
-        <p style="color: aliceblue; position: relative; top: 2rem; text-align: center; bottom: -10rem;" class="container">
-            We provide quality platforms for a better performance. </p>
+        <!-- <p style="color: aliceblue; position: relative; top: 2rem; text-align: center; bottom: -10rem;" class="container">
+            We provide quality platforms for a better performance. </p> -->
         <div class="pics-side">
             
             <figure>
