--- a/index.html
+++ b/index.html
@@ -241,14 +241,14 @@
     </div>
     <!-- Tool -->
     <div class="container">
-        <p class="testimony-title">Tools</p>
+        <p class="testimony-title">What we recommend</p>
         <!-- <p style="color: aliceblue; position: relative; top: 2rem; text-align: center; bottom: -10rem;" class="container">
             We provide quality platforms for a better performance. </p> -->
         <div class="pics-side">
             
             <figure>
                 <img src="/images/mt5.jpg" alt="Mountains" height="500px" width="250px">
-                <figcaption>MT5 </figcaption>
+                <figcaption>METATRADER5 </figcaption>
             </figure>
             <figure style="--c:#fff5">
                 <img src="/images/oxsite.jpg" alt="Mountains"height="500px" width="250px">
