--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/images/fav.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/images/fav.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/images//fav.png color="#5bbad5" />
+    <link rel="mask-icon" href="/images//fav.png "color="#5bbad5"/>
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     
@@ -66,6 +66,7 @@
     <section id="hero-section">
         <canvas id="gradient-canvas"></canvas>
         <div class="text-area">
+            <img style="position: relative; top: -6rem;" src="/images/fav.png" height="100px" width="100px" alt=""><span><img style="position: relative; top: -6rem;" src="/images/Youtube_logo.png" alt="" height="80px" width="100px"></span>
             <p class="title-text wow fadeInRight">Accelerate Your </p>
             <p class="title-text wow fadeInLeft"> Forex Trading Knownledge with OXBOT</p>
             <div class="title-subtitle">
