--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     </div>
     <!-- Tool -->
     <div class="container">
-        <p class="testimony-title">What we recommend</p>
+        <p class="testimony-title">Recommended tools</p>
         <!-- <p style="color: aliceblue; position: relative; top: 2rem; text-align: center; bottom: -10rem;" class="container">
             We provide quality platforms for a better performance. </p> -->
         <div class="pics-side">
