--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </section>
     <div class="container">
         <p class="container-title">Feautures</p>
-        <p style="color: aliceblue; position: relative; top: -8rem; text-align: center; bottom: -4rem;" class="container" >Below are some of our key feautures<br>we make sure we provide our users with quality tools and rources to make learning easy</p>
+        <p style="color: aliceblue; position: relative; top: -5.5rem; text-align: center; bottom: -4rem;" class="container" >Below are some of our key feautures<br>we make sure we provide our users with quality tools and rources to make learning easy</p>
         <div class="gradient-cards">
             <div class="card">
                 <div class="container-card bg-green-box">
@@ -242,7 +242,7 @@
     </div>
     <!-- Tool -->
     <div class="container">
-        <p class="testimony-title">Recommended tools</p>
+        <p class="testimony-title">Recommended Tools</p>
         <!-- <p style="color: aliceblue; position: relative; top: 2rem; text-align: center; bottom: -10rem;" class="container">
             We provide quality platforms for a better performance. </p> -->
         <div class="pics-side">
