--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li><a href="https://gitbooks.com" target="_self">DOCS</a></li>
                 <li><a href="https://oxacademy.xyz" target="_self">PRICING</a></li>
             </ul>
-            <button  href="https://paystack.com/buy/ox-academy-pryfxh" class="order-button">GET ACCESS</button>
+            <button  href="https://paystack.com/buy/ox-academy-pryfxh" class="order-button">Order Now</button>
         </nav>
     </header>
 
@@ -83,13 +83,13 @@
                 to help you make the best trading decisions.</span>
 
             <a class="cta-btn" href="https://paystack.com/buy/ox-academy-pryfxh" target="_self">
-                <span>ACCESS OXBOT</span>
+                <span>Signals Bot</span>
                 <div class="cta-icon">
                     <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
                 </div>
             </a>
             <a class="cta-btn" href="https://t.me/oxacademy" target="_self">
-                <span>YOUTUBE AUTOMATION</span>
+                <span>Youtube Course</span>
                 <div class="cta-icon">
                     <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
                 </div>
