--- a/cryptomus_90c7f2ec.html
+++ b/cryptomus_90c7f2ec.html
@@ -1,1 +1,43 @@
-cryptomus=90c7f2ec
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <!-- Your existing head content -->
+    <title>OX BOT - Ultimate Fx Solution</title>
+    <!-- ... (other meta tags and link tags) ... -->
+    <script src="https://js.paystack.co/v1/inline.js"></script>
+</head>
+
+<body>
+    <!-- Your existing body content -->
+    <header>
+        <nav class="menu">
+            <!-- ... (your navigation content) ... -->
+            <button id="orderButton" class="order-button">Order Now</button>
+        </nav>
+    </header>
+
+    <!-- ... (rest of your HTML content) ... -->
+
+    <script>
+        document.getElementById('orderButton').addEventListener('click', function () {
+            var handler = PaystackPop.setup({
+                key: 'YOUR_PAYSTACK_PUBLIC_KEY', // Replace with your public key
+                email: prompt("Please enter your email:"), // Collect email from user
+                amount: 1000000, // Amount in kobo (10,000 NGN)
+                currency: 'NGN',
+                ref: '' + Math.floor((Math.random() * 1000000000) + 1), // Generate a random reference number
+                callback: function (response) {
+                    // Send the reference to your server for verification
+                    window.location.href = 'https://t.me/YourBotUsername?start=verify_' + response.reference;
+                },
+                onClose: function () {
+                    alert('Transaction was not completed, window closed.');
+                },
+            });
+            handler.openIframe();
+        });
+    </script>
+</body>
+
+</html>
