--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
             var handler = PaystackPop.setup({
                 key: 'pk_live_d0818442ca7c2ab669e8f78b6c4d9640f4e86082', // Replace with your public key
                 email: prompt("Please enter your email:"), // Collect email from user
-                amount: 2500000, // Amount in kobo (10,000 NGN)
-                currency: 'NGN',
+                amount: 15000, // Amount in dollars ($15)
+                currency: 'USD',
                 ref: '' + Math.floor((Math.random() * 1000000000) + 1), // Generate a random reference number
                 callback: function (response) {
                     // Send the reference to your server for verification
